manifests/opentelemetry-demo-extras/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: opentelemetry-demo-frontend
  namespace: otel-demo
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - "shop.iemafzalhassan.tech"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: opentelemetry-demo-frontend
      port: 8080
